fix(calendly): improve on mobile

--- a/web/index.css
+++ b/web/index.css
@@ -3,6 +3,13 @@ body {
   background-color: black;
 }
 
+.calendly-inline-widget {
+  position: relative;
+  min-width:320px;
+  margin: 10px;
+  border-radius: 8px;
+}
+
 .video {
   position: fixed;
   right: 0;
